new: dev: Add more files

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,4 @@ flake8
 pep8-naming
 pytest
 ipdb
--e git+git@github.com:ocelotl/opentelemetry_python_autoagent.git@alpha#egg=opentelemetry_python_autoagent
--e git+git@github.com:ocelotl/opentelemetry_python_autoagent_flask.git@alpha#egg=opentelemetry_python_autoagent_flask
+file:///home/ocelotl/repos/opentelemetry/opentelemetry_python_autoagent#egg=opentelemetry_python_autoagent
